--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "codeigniter4/shield": "^1.0@beta",
+        "google/apiclient": "^2.0",
         "laminas/laminas-escaper": "^2.9",
         "psr/log": "^1.1"
     },
@@ -62,5 +64,7 @@
     },
     "scripts": {
         "test": "phpunit"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
